--- a/contact.html
+++ b/contact.html
@@ -45,148 +45,11 @@
           <hr class="line-vertical"></hr>
           <select id="languages" name="languages">
             <option lang="nl">Dutch - Nederlands</option>
-            <option lang="af">Afrikaans</option>
-            <option lang="sq">Albanian - shqip</option>
-            <option lang="am">Amharic - አማርኛ</option>
-            <option lang="ar">Arabic - العربي</option>
-            <option lang="an">Aragonese - aragonés</option>
-            <option lang="hy">Armenian - հայերեն</option>
-            <option lang="ast">Asturian - asturianu</option>
-            <option lang="az">Azerbaijani - azərbaycan dili</option>
-            <option lang="eu">Basque - euskara</option>
-            <option lang="be">Belarusian - беларуская</option>
-            <option lang="bn">Bengali - বাংলা</option>
-            <option lang="bs">Bosnian - bosanski</option>
-            <option lang="br">Breton - brezhoneg</option>
-            <option lang="bg">Bulgarian - български</option>
-            <option lang="ca">Catalan - català</option>
-            <option lang="ckb">Central Kurdish - کوردی (دەستنوسی عەرەبی)</option>
-            <option lang="zh">Chinese - 中文</option>
-            <option lang="zh-HK">Chinese (Hong Kong) - 中文（香港）</option>
-            <option lang="zh-CN">Chinese (Simplified) - 中文（简体）</option>
-            <option lang="zh-TW">Chinese (Traditional) - 中文（繁體）</option>
-            <option lang="co">Corsican</option>
-            <option lang="hr">Croatian - hrvatski</option>
-            <option lang="cs">Czech - čeština</option>
-            <option lang="da">Danish - dansk</option>
-            <option lang="nl">Dutch - Nederlands</option>
             <option lang="en">English</option>
-            <option lang="en-AU">English (Australia)</option>
-            <option lang="en-CA">English (Canada)</option>
-            <option lang="en-IN">English (India)</option>
-            <option lang="en-NZ">English (New Zealand)</option>
-            <option lang="en-ZA">English (South Africa)</option>
-            <option lang="en-GB">English (United Kingdom)</option>
-            <option lang="en-US">English (United States)</option>
-            <option lang="eo">Esperanto - esperanto</option>
-            <option lang="et">Estonian - eesti</option>
-            <option lang="fo">Faroese - føroyskt</option>
-            <option lang="fil">Filipino</option>
-            <option lang="fi">Finnish - suomi</option>
             <option lang="fr">French - français</option>
-            <option lang="fr-CA">French (Canada) - français (Canada)</option>
-            <option lang="fr-FR">French (France) - français (France)</option>
-            <option lang="fr-CH">French (Switzerland) - français (Suisse)</option>
-            <option lang="gl">Galician - galego</option>
-            <option lang="ka">Georgian - ქართული</option>
             <option lang="de">German - Deutsch</option>
-            <option lang="de-AT">German (Austria) - Deutsch (Österreich)</option>
-            <option lang="de-DE">German (Germany) - Deutsch (Deutschland)</option>
-            <option lang="de-LI">German (Liechtenstein) - Deutsch (Liechtenstein)</option>
-            <option lang="de-CH">German (Switzerland) - Deutsch (Schweiz)</option>
-            <option lang="el">Greek - Ελληνικά</option>
-            <option lang="gn">Guarani</option>
-            <option lang="gu">Gujarati - ગુજરાતી</option>
-            <option lang="ha">Hausa</option>
-            <option lang="haw">Hawaiian - ʻŌlelo Hawaiʻi</option>
-            <option lang="he">Hebrew - עברית</option>
-            <option lang="hi">Hindi - हिन्दी</option>
-            <option lang="hu">Hungarian - magyar</option>
-            <option lang="is">Icelandic - íslenska</option>
-            <option lang="id">Indonesian - Indonesia</option>
-            <option lang="ia">Interlingua</option>
-            <option lang="ga">Irish - Gaeilge</option>
-            <option lang="it">Italian - italiano</option>
-            <option lang="it-IT">Italian (Italy) - italiano (Italia)</option>
-            <option lang="it-CH">Italian (Switzerland) - italiano (Svizzera)</option>
-            <option lang="ja">Japanese - 日本語</option>
-            <option lang="kn">Kannada - ಕನ್ನಡ</option>
-            <option lang="kk">Kazakh - қазақ тілі</option>
-            <option lang="km">Khmer - ខ្មែរ</option>
-            <option lang="ko">Korean - 한국어</option>
-            <option lang="ku">Kurdish - Kurdî</option>
-            <option lang="ky">Kyrgyz - кыргызча</option>
-            <option lang="lo">Lao - ລາວ</option>
-            <option lang="la">Latin</option>
-            <option lang="lv">Latvian - latviešu</option>
-            <option lang="ln">Lingala - lingála</option>
-            <option lang="lt">Lithuanian - lietuvių</option>
-            <option lang="mk">Macedonian - македонски</option>
-            <option lang="ms">Malay - Bahasa Melayu</option>
-            <option lang="ml">Malayalam - മലയാളം</option>
-            <option lang="mt">Maltese - Malti</option>
-            <option lang="mr">Marathi - मराठी</option>
-            <option lang="mn">Mongolian - монгол</option>
-            <option lang="ne">Nepali - नेपाली</option>
-            <option lang="no">Norwegian - norsk</option>
-            <option lang="nb">Norwegian Bokmål - norsk bokmål</option>
-            <option lang="nn">Norwegian Nynorsk - nynorsk</option>
-            <option lang="oc">Occitan</option>
-            <option lang="or">Oriya - ଓଡ଼ିଆ</option>
-            <option lang="om">Oromo - Oromoo</option>
-            <option lang="ps">Pashto - پښتو</option>
-            <option lang="fa">Persian - فارسی</option>
-            <option lang="pl">Polish - polski</option>
-            <option lang="pt">Portuguese - português</option>
-            <option lang="pt-BR">Portuguese (Brazil) - português (Brasil)</option>
-            <option lang="pt-PT">Portuguese (Portugal) - português (Portugal)</option>
-            <option lang="pa">Punjabi - ਪੰਜਾਬੀ</option>
-            <option lang="qu">Quechua</option>
-            <option lang="ro">Romanian - română</option>
-            <option lang="mo">Romanian (Moldova) - română (Moldova)</option>
-            <option lang="rm">Romansh - rumantsch</option>
-            <option lang="ru">Russian - русский</option>
-            <option lang="gd">Scottish Gaelic</option>
-            <option lang="sr">Serbian - српски</option>
-            <option lang="sh">Serbo-Croatian - Srpskohrvatski</option>
-            <option lang="sn">Shona - chiShona</option>
-            <option lang="sd">Sindhi</option>
-            <option lang="si">Sinhala - සිංහල</option>
-            <option lang="sk">Slovak - slovenčina</option>
-            <option lang="sl">Slovenian - slovenščina</option>
-            <option lang="so">Somali - Soomaali</option>
-            <option lang="st">Southern Sotho</option>
             <option lang="es">Spanish - español</option>
-            <option lang="es-AR">Spanish (Argentina) - español (Argentina)</option>
-            <option lang="es-419">Spanish (Latin America) - español (Latinoamérica)</option>
-            <option lang="es-MX">Spanish (Mexico) - español (México)</option>
-            <option lang="es-ES">Spanish (Spain) - español (España)</option>
-            <option lang="es-US">Spanish (United States) - español (Estados Unidos)</option>
-            <option lang="su">Sundanese</option>
-            <option lang="sw">Swahili - Kiswahili</option>
-            <option lang="sv">Swedish - svenska</option>
-            <option lang="tg">Tajik - тоҷикӣ</option>
-            <option lang="ta">Tamil - தமிழ்</option>
-            <option lang="tt">Tatar</option>
-            <option lang="te">Telugu - తెలుగు</option>
-            <option lang="th">Thai - ไทย</option>
-            <option lang="ti">Tigrinya - ትግርኛ</option>
-            <option lang="to">Tongan - lea fakatonga</option>
-            <option lang="tr">Turkish - Türkçe</option>
-            <option lang="tk">Turkmen</option>
-            <option lang="tw">Twi</option>
-            <option lang="uk">Ukrainian - українська</option>
-            <option lang="ur">Urdu - اردو</option>
-            <option lang="ug">Uyghur</option>
-            <option lang="uz">Uzbek - o‘zbek</option>
-            <option lang="vi">Vietnamese - Tiếng Việt</option>
-            <option lang="wa">Walloon - wa</option>
-            <option lang="cy">Welsh - Cymraeg</option>
-            <option lang="fy">Western Frisian</option>
-            <option lang="xh">Xhosa</option>
-            <option lang="yi">Yiddish</option>
-            <option lang="yo">Yoruba - Èdè Yorùbá</option>
-            <option lang="zu">Zulu - isiZulu</option>
+            <!-- Andere talen opties -->
         </select>
         </ul>
       </nav>
