Code verbeterd tablet formulier en comments

--- a/informatie.html
+++ b/informatie.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="description" content="Informatie hoe de TestAssistent app werkt.">
 		<link rel="stylesheet" href="styles/style.css" />
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
 
@@ -16,9 +17,9 @@
 			</a>
 			<div class="ham" id="ham">
 			  <p class="word-menu">Menu</p>
-			  <span class="ham-line ham-line1"></span>
-			  <span class="ham-line ham-line2"></span>
-			  <span class="ham-line ham-line3"></span>
+			  <span class="ham-line ham-line-one"></span>
+        <span class="ham-line ham-line-two"></span>
+        <span class="ham-line ham-line-three"></span>
 			</div>
 			<nav class="wrapper" id="wrapper">
 			  <ul class="primary-navigation flex">
