--- a/informatie.html
+++ b/informatie.html
@@ -17,9 +17,9 @@
 			</a>
 			<div class="ham" id="ham">
 			  <p class="word-menu">Menu</p>
-			  <span class="ham-line ham-line-one"></span>
-        <span class="ham-line ham-line-two"></span>
-        <span class="ham-line ham-line-three"></span>
+			  <span class="ham-line ham-line1"></span>
+        <span class="ham-line ham-line2"></span>
+        <span class="ham-line ham-line3"></span>
 			</div>
 			<nav class="wrapper" id="wrapper">
 			  <ul class="primary-navigation flex">
